--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.movieguide">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name=".BaseApplication"
@@ -10,22 +10,24 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".app.activity.MoviesListingActivity"
-            android:launchMode="singleTask">
+        <activity android:name=".app.activity.OnboardingActivity"></activity>
+        <activity android:name=".app.activity.SplashScreenActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".app.activity.MoviesListingActivity"
+            android:launchMode="singleTask"></activity>
         <activity
             android:name=".app.activity.MovieDetailsActivity"
             android:parentActivityName=".app.activity.MoviesListingActivity"
             android:theme="@style/AppTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".app.activity.MoviesListingActivity"/>
+                android:value=".app.activity.MoviesListingActivity" />
         </activity>
     </application>
 
